// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Board />  Component test draw game board 1`] = `
<div
  className="gameWrapper"
>
  Game Board
  <ul
    className="BoardWrapper"
  >
    <li
      arrayindex={0}
      className="BoardItem"
      onClick={[Function]}
      value={0}
    >
       
      x
    </li>
    <li
      arrayindex={1}
      className="BoardItem"
      onClick={[Function]}
      value={1}
    >
       
      o
    </li>
    <li
      arrayindex={2}
      className="BoardItem"
      onClick={[Function]}
      value={0}
    >
       
      x
    </li>
    <li
      arrayindex={3}
      className="BoardItem"
      onClick={[Function]}
      value={1}
    >
       
      o
    </li>
    <li
      arrayindex={4}
      className="BoardItem"
      onClick={[Function]}
      value={0}
    >
       
      x
    </li>
    <li
      arrayindex={5}
      className="BoardItem"
      onClick={[Function]}
      value={1}
    >
       
      o
    </li>
    <li
      arrayindex={6}
      className="BoardItem"
      onClick={[Function]}
      value={0}
    >
       
      x
    </li>
    <li
      arrayindex={7}
      className="BoardItem"
      onClick={[Function]}
      value={1}
    >
       
      o
    </li>
    <li
      arrayindex={8}
      className="BoardItem"
      onClick={[Function]}
      value={0}
    >
       
      x
    </li>
  </ul>
</div>
`;

exports[`<Board />  Component test renders empty Board component 1`] = `
<div
  className="gameWrapper"
>
  Game Board
  <ul
    className="BoardWrapper"
  >
    <BoardItem
      arrayindex={0}
      key="boardItem0"
      onClick={[Function]}
      value={-1}
    />
    <BoardItem
      arrayindex={1}
      key="boardItem1"
      onClick={[Function]}
      value={-1}
    />
    <BoardItem
      arrayindex={2}
      key="boardItem2"
      onClick={[Function]}
      value={-1}
    />
    <BoardItem
      arrayindex={3}
      key="boardItem3"
      onClick={[Function]}
      value={-1}
    />
    <BoardItem
      arrayindex={4}
      key="boardItem4"
      onClick={[Function]}
      value={-1}
    />
    <BoardItem
      arrayindex={5}
      key="boardItem5"
      onClick={[Function]}
      value={-1}
    />
    <BoardItem
      arrayindex={6}
      key="boardItem6"
      onClick={[Function]}
      value={-1}
    />
    <BoardItem
      arrayindex={7}
      key="boardItem7"
      onClick={[Function]}
      value={-1}
    />
    <BoardItem
      arrayindex={8}
      key="boardItem8"
      onClick={[Function]}
      value={-1}
    />
  </ul>
</div>
`;
